# maia

./: CONTRIBUTING.md  Cargo.toml  INDEX.md  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml
demo/: Cargo.toml  build.rs  bundle
demo/macos/: Info.plist  MoltenVK_icd.json
demo/shaders/: triangle.frag  triangle.vert
demo/src/: main.rs
hello-triangle/: Cargo.toml  README.md
hello-triangle/src/: main.rs
lib/x64/: vulkan.lib
lib/x86/: vulkan.lib
src/: buffer.rs  cleanup_queue.rs  command_buffer.rs  descriptor_set.rs  device.rs  enums.rs  error.rs  exclusive.rs  ext.rs  fence.rs  ffi.rs  framebuffer.rs  image.rs  instance.rs  lib.rs  lifetime.rs  load.rs  macos_instructions.rs  memory.rs  physical_device.rs  pipeline.rs  queue.rs  render_pass.rs  sampler.rs  semaphore.rs  shader.rs  subobject.rs  types.rs  vulkan.def  window.rs
src/command_buffer/: barrier.rs  bind.rs  command.rs  draw.rs  transfer.rs
src/descriptor_set/: update.rs
src/ext/: ext_metal_surface.rs  khr_surface.rs  khr_swapchain.rs  khr_wayland_surface.rs  khr_win32_surface.rs  khr_xlib_surface.rs  load.rs
