[package]
name = "ember"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
description = "Safe low-level Vulkan bindings"

[dependencies]
raw-window-handle = { version = "0.4", optional = true }
bumpalo = { version = "3.10", features = ["collections"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = { version = "0.2", optional = true }

[features]
window = ["dep:raw-window-handle", "dep:raw-window-metal"]

[dev-dependencies]
rand = "0.8"
# For doctests. See hello-triangle/Cargo.toml
ember = { path = ".", features = [ "window" ] }
winit = "0.26"
bytemuck = { version = "1.0", features = [ "derive" ] }
inline-spirv = "0.1"

[workspace]
members = ["demo", "hello-triangle"]

# Build with
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --no-deps --all-features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
