[package]
name = "maia"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
description = "Safe low-level Vulkan bindings"
homepage = "https://github.com/danielkeller/maia"
repository = "https://github.com/danielkeller/maia"

[dependencies]
bitflags = "1.3"
bumpalo = { version = "3.10", features = ["collections"] }
raw-window-handle = { version = "0.4", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = { version = "0.2", optional = true }

[features]
window = ["dep:raw-window-handle", "dep:raw-window-metal"]

[dev-dependencies]
# For doctests. See hello-triangle/Cargo.toml
maia = { path = ".", features = [ "window" ] }
winit = "0.26"
bytemuck = { version = "1.0", features = [ "derive" ] }
inline-spirv = "0.1"

[target.'cfg(loom)'.dependencies]
loom = "0.5"

[workspace]
members = ["demo", "hello-triangle"]

# Build with
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --no-deps --all-features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
