[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
ember = { path = "..", features = [ "window" ] }
winit = "0.26"
byte-strings = "0.2"
anyhow = { version = "1.0", features = [ "backtrace" ] }
inline-spirv = "0.1"
bytemuck = { version = "1.0", features = [ "derive" ] }
ultraviolet = { version = "0.9", features = [ "bytemuck" ] }
image = { version = "0.24", features = [ "jpeg" ] }

# Turn on optimization here to speed up debug builds
[profile.dev.package.miniz_oxide]
opt-level = 3
[profile.dev.package.adler32]
opt-level = 3
[profile.dev.package.jpeg-decoder]
opt-level = 3
